# ocaml-lexer

./: .gitattributes  Cargo.toml
keyword-generator/: Cargo.toml
keyword-generator/src/: lib.rs
src/: lexer.rs  lib.rs
tests/: lex_real_file.rs
